feat: add lazy loading for routes
