# packages/core-api/src/Api/ApplicationInfo/ApplicationInfoClasses.ts
@@ -1,0 +1,3 @@
+export interface ApplicationInfo {
+  version: string;
+}
