# packages/core-api/src/Api/index.ts
@@ -1,3 +1,4 @@
+export * from "./ApplicationInfo";
 export * from "./ForgotPassword";
 export * from "./Login";
 export * from "./Logout";
